2013-01-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/resource_registration.php,
	extensions/resource_exportation.php,
	operation/reporting/reporting_viewer.php, operation/menu.php,
	godmode/reporting/reporting_builder.php,
	godmode/reporting/reporting_builder.item_editor.php,
	include/functions_reports.php, include/functions_graph.php,
	include/functions_events.php, include/styles/pandora.css,
	include/graphs/fgraph.php, include/functions_reporting.php,
	include/functions_alerts.php: cleaned source code from the trunk
	because they more easy to merge with the trunk.

2012-12-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php: re-added lost
	edit the description in the item "custom_graph".
	
	* include/functions_reporting.php: some fixes and changes in the
	reports.

2012-12-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php: fixed the
	dates of inventory thank to Juan Manuel Ramon.

2012-12-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_reporting.php: cleaned source code style.

2012-12-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* install.php: cleaned source code style.
	
	* godmode/reporting/reporting_builder.item_editor.php,
	godmode/reporting/reporting_builder.list_items.php,
	include/styles/pandora.css, include/functions_reporting.php: fixed
	the "group_report" and the inventory.

2012-12-27  Hirofumi Kosaka  <kosaka@rworks.jp>

	* general/logon_ok.php: Fixed typo. (fixed a bug that the
	number of "Alerts defined" at Pandora Main Page showed always "-")

2012-12-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_modules.php
	include/functions_network_components.php
	extensions/module_groups.php
	godmode/extensions.php
	godmode/agentes/configurar_agente.php
	godmode/servers/recon_script.php
	godmode/servers/plugin.php
	godmode/servers/manage_recontask.php
	godmode/alerts/alert_compounds.php